added new service role - director of uni collaboration

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@ http://www.templatemo.com/tm-395-urbanic
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
                         <p> I'm an Associate Professor at the
-                           University of Sydney and the the Director
-                           of the
+                           University of Sydney, serving as the
+                           Director of University Collaboration and
+                           the Director of the
                            <a href=https://usyd-desci.github.io/>Sydney
                            Blockchain Centre</a>. I'm also an elected
                            member of
@@ -1362,13 +1363,15 @@ Today,</i> etc.
                         <!-- <li>Media Spokesperson, <a href="https://www.monash.edu/it">Faculty of Information Technology</a>. (June.2019 - present) </li> -->
                     <!-- </ul><br> -->
 
-                    <font size="5"><b> External Service:
+                    <font size="5"><b> Service:
                     </b></font><br><br><font size="4">
 	                  <ul type="disc"; style="margin-bottom:
                                                   6px">
 
 	                    <li><b>Membership and direction of organisations:</b></li>
 	                    <ul type="circle">
+                              <li> [2025-present] Director of University Collaboration, The University of Sydney.</li>
+                              <li> [2024-present] Director of Sydney Blockchain Centre, The University of Sydney.</li>
                               <li> [2024-present] ACS Australian
                             Representative, IFIP Technical Committee
                             10 on Computer Systems Technology.</li>
@@ -1384,9 +1387,10 @@ Today,</i> etc.
                                  The 2024 Jean-Claude Laprie (JCL)
                                  Award for IFIP WG 10.4.
                                </li>
-                                <li>[2023-2024] Chair, ACE Working Group on Sustainability and Social Impact.</li>
+                              <li>[2023-2024] Chair, ACE Working Group on Sustainability and Social Impact.</li>
                                 <li>[2022-present] Elected Member, IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance</li>
-                                <li>[2021-present] Scientific Advisory Board, Austrian Blockchain Center, Austria.</li>
+                              <li>[2021-present] Scientific Advisory Board, Austrian Blockchain Center, Austria.</li>
+                              <li>[2020–2024] Research Director, Monash Blockchain Technology Centre.</li>
                               </ul><br>
 
                             <li><b>Journal editorship:</b></li>
