--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+                           <li><b>[2025-03]</b> Our work on "Constant
+                          latency and finality for dynamically
+                          available DAG" has been accepted by <b> IEEE
+                          S&P’25</b>! Congrats Hans!</li>
+
                           <li><b>[2025-02]</b> I'm delighted to
                           receive <b>IEEE Technical Achievement
                           Award</b> by IEEE TEMS TC on Blockchain and
@@ -789,21 +794,18 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+                            <br> <b>[IEEE S&P'25]</b> "Constant latency and finality for dynamically available DAG"
                             <br> <b>[EuroSys'25]</b> "Achilles: Efficient TEE-Assisted BFT Consensus via Rollback Resilient Recovery"
                             <br> <b>[ACSAC'24]</b> "Janus: An Asynchronous Common Subset Protocol with Trusted Components"
                             <br> <b>[IEEE TDSC'24]</b> "Trusted Hardware Assisted Reliable Broadcast and Leaderless BFT Consensus"
                             <br> <b>[IEEE CSF'24]</b> "Modeling Mobile Crash in Byzantine Consensus"
-                            <br> <b>[IEEE IPDPS'24]</b> "OneShot:
-                            View-Adapting Streamlined BFT with TEEs"
+                            <br> <b>[IEEE IPDPS'24]</b> "OneShot: View-Adapting Streamlined BFT with TEEs"
                             <br> <b>[IEEE/IFIP DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
                             <br> <b>[IEEE/IFIP DSN'23]</b> "Analyzing the Performance of the Inter-Blockchain Communication Protocol"
-                            <br> <b>[FC'23]</b> "Fair Delivery of Decentralised Randomness Beacon"
-                            <br> <b>[FC'23]</b> "Leveraging the Verifier’s Dilemma to Double Spend in Bitcoin"
                             <br> <b>[IEEE S&P'23]</b> "BlindHub: Bitcoin-Compatible Privacy-Preserving Payment Channel Hubs Supporting Variable Amounts"
                             <br> <b>[IEEE ICDE'23]</b> "TxAllo: Dynamic Transaction Allocation in Sharded Blockchain Systems"
                             <br> <b>[ACM computing surveys'23]</b> "A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges & Research Directions"
                             <br> <b>[ACM EuroSys'22]</b> "DAMYSUS: Streamlined BFT Consensus Leveraging Trusted Components"
-                            <br> <b>[ACM AFT'22]</b> "Analysing and Improving Shard Allocation Protocols for Sharded Blockchains"
                             <br><br>
 
                             <b>Media Appearance</b>
