--- a/index.html
+++ b/index.html
@@ -176,9 +176,8 @@ http://www.templatemo.com/tm-395-urbanic
                           on designing robust, high-performance
                           digital infrastructures by leveraging
                           dependable computing, decentralised systems,
-                          cryptography, and security protocols, and
-                          optimising these systems for scalability and
-                          resilience.<br><br>
+                          cryptography, and security
+                          protocols.<br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
