--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ http://www.templatemo.com/tm-395-urbanic
                       <p><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
                             Associate Professor</a>
                           <br> Elected Member, IFIP Working Group 10.4
-                          <br> Australian Representative to the IFIP TC 10
+                          <br> Australian Representative, IFIP TC 10
                           <!--  <br> Advisory Board, Austrian Blockchain Center -->
                           <br><br>
                     </font></b>
@@ -149,8 +149,8 @@ http://www.templatemo.com/tm-395-urbanic
                            Federation for Information Processing
                            (IFIP) Working Group 10.4 on Dependable
                            Computing and Fault Tolerance</a>. I also
-                           serve as the Australian Representative to
-                           the IFIP Technical Committee 10 on Computer
+                           serve as the Australian Representative for
+                           IFIP Technical Committee 10 on Computer
                            Systems Technology, elected by the
                            Australian Computer Society (ACS).
 
@@ -170,14 +170,13 @@ http://www.templatemo.com/tm-395-urbanic
                       Senior Lecturer</a> at Monash University. <br>
                           <br>
                           My research addresses real-world challenges
-                          in creating practical, efficient systems
-                          that prioritise dependability, trust,
-                          security, privacy, and scalability. I focus
-                          on designing robust, high-performance
-                          digital infrastructures by leveraging
-                          dependable computing, decentralised systems,
-                          cryptography, and security
-                          protocols.<br><br>
+                          in building practical systems that
+                          prioritise resilience, trust, security,
+                          privacy, and scalability. I design robust,
+                          high-performance digital infrastructures by
+                          leveraging dependable computing,
+                          decentralised systems, cryptography, and
+                          security protocols.  <br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
@@ -930,7 +929,7 @@ Today,</i> etc.
           </ol>
           <b>PhD</b><br>
           <ol type="circle">
-            <li>Zoey Ziyi Li (2021-2024), Monash University. <br> (First job: Lecture, University of Melbourne.)</li>
+            <li>Zoey Ziyi Li (2021-2024), Monash University. <br> (First job: Lecturer, University of Melbourne.)</li>
             <li>Shange Fu (2019-2024), Monash University. <br> (First job: Head of Research, APRO Research)</li>
             <li>Joao Otavio Massari Chervinski (2019-2023), Monash University. <br> (First job: Researcher at Informal Systems.)</li>
             <li>Chaochen Shi (2020-2023), Deakin University. <br> (First job: Postdoc at HK Poly University.)</li>
