--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ http://www.templatemo.com/tm-395-urbanic
                           <br>
                           My research addresses real-world challenges
                           in building practical systems that
-                          prioritise resilience, trust, security,
+                          prioritise dependability, trust, security,
                           privacy, and scalability. I design robust,
                           high-performance digital infrastructures by
                           leveraging dependable computing,
