update on ICDCS and IEEE TSE

--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+                          <li><b>[2025-03]</b> Our work on "Mosaic:
+                          Client-driven account allocation framework
+                          in sharded blockchains" has been accepted
+                          by <b> IEEE ICDCS’25</b>! Congrats
+                          Yuanzhe!</li>
+
                            <li><b>[2025-03]</b> Our work on "Constant
                           latency and finality for dynamically
                           available DAG" has been accepted by <b> IEEE
@@ -792,10 +798,14 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+                            <br> <b>[IEEE ICDCS'25]</b> "Mosaic: Client-driven Account Allocation Framework in Sharded Blockchains"
                             <br> <b>[IEEE S&P'25]</b> "Constant latency and finality for dynamically available DAG"
-                            <br> <b>[EuroSys'25]</b> "Achilles: Efficient TEE-Assisted BFT Consensus via Rollback Resilient Recovery"
+                            <br> <b>[ACM EuroSys'25]</b> "Achilles: Efficient TEE-Assisted BFT Consensus via Rollback Resilient Recovery"
+                            <br> <b>[IEEE TSE 2025]</b>
+                            "MM-SCS: Leveraging Multimodal Features to Enhance Smart Contract Code Search"
+                            <br> <b>[IEEE TDSC 2025]</b> "Formal Treatment of Watchtowers and FPPW: A Fair and Privacy-Preserving Bitcoin Watchtower"
                             <br> <b>[ACSAC'24]</b> "Janus: An Asynchronous Common Subset Protocol with Trusted Components"
-                            <br> <b>[IEEE TDSC'24]</b> "Trusted Hardware Assisted Reliable Broadcast and Leaderless BFT Consensus"
+                            <br> <b>[IEEE TDSC 2024]</b> "Trusted Hardware Assisted Reliable Broadcast and Leaderless BFT Consensus"
                             <br> <b>[IEEE CSF'24]</b> "Modeling Mobile Crash in Byzantine Consensus"
                             <br> <b>[IEEE IPDPS'24]</b> "OneShot: View-Adapting Streamlined BFT with TEEs"
                             <br> <b>[IEEE/IFIP DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
