--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@ http://www.templatemo.com/tm-395-urbanic
                               class="btn btn-primary"
                               style="padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">
                               Contact
-                            </button>                        <!--     <a href="doc/5A096C34.asc"> -->
-                              <!-- <font size="3">(PGP Key)</font></a> -->
+                            </button><br>
+                            <a href="doc/public_key.asc">
+                              <font size="3">(PGP Key)</font></a>
                             <br><br><!-- <font style="color:red"> -->
                                 <!-- <b>We are hiring one postdoc!</b> <br> -->
                                 <!-- <a href="https://usyd.wd3.myworkdayjobs.com/en-US/USYD_EXTERNAL_CAREER_SITE/job/Postdoctoral-Research-Fellow---Blockchain_0119398"><b>Apply here!</b></a></font> -->
