--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ http://www.templatemo.com/tm-395-urbanic
                               <li><a href="#templatemo-Research">RESEARCH</a></li>
                               <li><a href="#templatemo-Students">MY TEAM</a></li>
                               <li><a href="#templatemo-Awards">AWARDS</a></li>
-                              <li><a href="#templatemo-Teaching">TEACHING</a></li>
+                              <!-- <li><a href="#templatemo-Teaching">TEACHING</a></li> -->
                               <li><a href="#templatemo-Services">SERVICES</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
