--- a/index.html
+++ b/index.html
@@ -199,10 +199,26 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
 
+                          <li><b>[2025-03]</b> Our paper, "Posterior
+                          Security: Anonymity and Message Hiding of
+                          Standard Signatures", has been accepted
+                          to <b>ACM CCS 2025</b>!
+
+                          Addressing a critical unmet requirement in
+                          the CBDC architecture jointly proposed by
+                          the Bank for International Settlements and
+                          the Hong Kong Monetary Authority, we
+                          introduce the notion of <i>posterior
+                          security</i>, enabling anonymity and message
+                          hiding for standard signatures — with
+                          applications to CBDC, trusted hardware–based
+                          digital wallets, and beyond.
+                          </li>
+
                           <li><b>[2025-03]</b> Our work on "Mosaic:
                           Client-driven account allocation framework
                           in sharded blockchains" has been accepted
-                          by <b> IEEE ICDCS’25</b>! Congrats
+                          by <b>IEEE ICDCS’25</b>! Congrats
                           Yuanzhe!</li>
 
                            <li><b>[2025-03]</b> Our work on "Constant
@@ -799,6 +815,7 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+                            <br> <b>[ACM CCS'25]</b> "Posterior Security: Anonymity and Message Hiding of Standard  Signatures"
                             <br> <b>[IEEE ICDCS'25]</b> "Mosaic: Client-driven Account Allocation Framework in Sharded Blockchains"
                             <br> <b>[IEEE S&P'25]</b> "Constant latency and finality for dynamically available DAG"
                             <br> <b>[ACM EuroSys'25]</b> "Achilles: Efficient TEE-Assisted BFT Consensus via Rollback Resilient Recovery"
