--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@ http://www.templatemo.com/tm-395-urbanic
                       <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Lecturer</a>
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
-                      Senior Lecturer</a> at Monash University. <br>
+                      Senior Lecturer</a> at Monash University, where
+                      I was also elected as a 2023 Monash Research
+                      Talent Accelerator (RTA) Fellow. <br>
                           <br>
                           My research addresses real-world challenges
                           in building practical systems that
