--- a/index.html
+++ b/index.html
@@ -170,16 +170,24 @@ http://www.templatemo.com/tm-395-urbanic
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University, where
                       I was also elected as a 2023 Monash Research
-                      Talent Accelerator (RTA) Fellow. <br>
-                          <br>
-                          My research addresses real-world challenges
-                          in building practical systems that
-                          prioritise dependability, trust, security,
-                          privacy, and scalability. I design robust,
-                          high-performance digital infrastructures by
-                          leveraging dependable computing,
-                          decentralised systems, cryptography, and
-                          security protocols.  <br><br>
+                      Talent Accelerator (RTA) Fellow. <br> <br>
+
+                      My research addresses real-world challenges in
+                      building practical systems that prioritise
+                      dependability, trust, security, privacy, and
+                      scalability. I design robust, high-performance
+                      digital infrastructures by leveraging dependable
+                      computing, decentralised systems, cryptography,
+                      and security protocols.  <br><br>
+
+                      My work has identified and mitigated critical
+                      vulnerabilities in widely deployed blockchain
+                      protocols. These findings have been adopted by
+                      major blockchain platforms — with a combined
+                      market capitalisation exceeding $30 billion — to
+                      enhance security and performance, as well as by
+                      governments advancing digital transformation.
+                          <br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
