--- a/index.html
+++ b/index.html
@@ -1416,14 +1416,17 @@ Today,</i> etc.
                               <li> [2024-present] Member,
                               Communication and Outreach Committee,
                               IFIP WG 10.4 on Dependable Computing and
-                              Fault Tolerance.</li>
-                               <li> [2024] Member, Selection
-                                 Committee, The Test Of Time Award for
-                                 DSN 2024.</li>
+                                Fault Tolerance.</li>
+                              <li>
+                                [2025] Member, Selection Committee,
+                                Carter Award, DSN 2025.
+                              </li>
+                               <li>[2024] Member, Selection
+                                 Committee, Test Of Time Award, DSN 2024.</li>
                                <li>
                                  [2024] Member, Selection Committee,
-                                 The 2024 Jean-Claude Laprie (JCL)
-                                 Award for IFIP WG 10.4.
+                                 Jean-Claude Laprie (JCL)
+                                 Award, IFIP WG 10.4.
                                </li>
                               <li>[2023-2024] Chair, ACE Working Group on Sustainability and Social Impact.</li>
                                 <li>[2022-present] Elected Member, IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance</li>
