--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ http://www.templatemo.com/tm-395-urbanic
                           <br><br>
                     </font></b>
                       </p>
-                    <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
+                <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
+                    <b>About Me</b>
                         <p> I'm an Associate Professor at the
                            University of Sydney, serving as the
                            Director of University Collaboration and
@@ -153,10 +154,10 @@ http://www.templatemo.com/tm-395-urbanic
                            serve as the Australian Representative for
                            IFIP Technical Committee 10 on Computer
                            Systems Technology, elected by the
-                           Australian Computer Society (ACS).
+                           Australian Computer Society (ACS).</p>
 
-                          <br>
-                        <br>I received my PhD in Computer Science from
+                      <b>My Journey</b>
+                        <p>I received my PhD in Computer Science from
                       the University of Birmingham (UK), supervised
                       by <a href="https://scholar.google.co.uk/citations?user=zVGVpX4AAAAJ&hl=en">
                       Prof. Mark Ryan</a>, followed by a postdoc
@@ -170,23 +171,29 @@ http://www.templatemo.com/tm-395-urbanic
                       and <a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29#Teaching_and_research_positions">
                       Senior Lecturer</a> at Monash University, where
                       I was also elected as a 2023 Monash Research
-                      Talent Accelerator (RTA) Fellow. <br> <br>
-
-                      My research addresses real-world challenges in
+                      Talent Accelerator (RTA) Fellow. </p>
+                      <b>What I Work On</b>
+                      <p>My research addresses real-world challenges in
                       building practical systems that prioritise
                       dependability, trust, security, privacy, and
                       scalability. I design robust, high-performance
                       digital infrastructures by leveraging dependable
                       computing, decentralised systems, cryptography,
-                      and security protocols.  <br><br>
-
-                      My work has identified and mitigated critical
+                        and security protocols.</p>
+                      <b>Adoption and Impact.</b>
+                      <p>My work has identified and mitigated critical
                       vulnerabilities in widely deployed blockchain
                       protocols. These findings have been adopted by
                       major blockchain platforms — with a combined
                       market capitalisation exceeding $30 billion — to
-                      enhance security and performance, as well as by
-                      governments advancing digital transformation.
+                        enhance security and performance.
+
+                        My research has also been adopted by
+                        governments in advancing digital
+                        transformation, and has contributed to
+                        cybercrime investigations, supporting
+                        research-informed decision-making in practice.
+                      </p>
                           <br><br>
 
 
