--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ http://www.templatemo.com/tm-395-urbanic
                       digital infrastructures by leveraging dependable
                       computing, decentralised systems, cryptography,
                         and security protocols.</p>
-                      <b>Adoption and Impact.</b>
+                      <b>Adoption and Impact</b>
                       <p>My work has identified and mitigated critical
                       vulnerabilities in widely deployed blockchain
                       protocols. These findings have been adopted by
