--- a/index.html
+++ b/index.html
@@ -151,10 +151,41 @@ http://www.templatemo.com/tm-395-urbanic
                            Federation for Information Processing
                            (IFIP) Working Group 10.4 on Dependable
                            Computing and Fault Tolerance</a>. I also
-                           serve as the Australian Representative for
-                           IFIP Technical Committee 10 on Computer
-                           Systems Technology, elected by the
-                           Australian Computer Society (ACS).</p>
+                           serve as
+                           the <a href="https://www.acs.org.au/governance/ifip-working-group/ifip-working-group-extended.html">
+                           Australian Representative</a> for IFIP
+                           Technical Committee 10 on Computer Systems
+                           Technology, elected by the Australian
+                           Computer Society (ACS). </p>
+
+                          <p> I'm a recipient of
+                              multiple <a href="#templatemo-Awards">
+                              awards
+                            </a> recognising my research
+                            contributions, including the IEEE TEMS
+                            Technical Achievement Award (2024), ARC
+                            DECRA Fellowship (2021), IBM Academic
+                            Award (2020), and several Best Paper
+                            Awards, among others.
+
+                            I have served as Chief Investigator on
+                            <a href="#templatemo-Awards">
+                              research projects
+                            </a> totaling over 10 million dollars.  I
+                            serve on
+                            the <a href="#templatemo-Services">
+                            program committees
+                          </a>
+                            of top-tier dependability and blockchain
+                            conferences, including <i>ACM
+                            CCS</i>, <i>USENIX
+                            ATC</i>, <i>VLDB</i>, <i>DSN</i>, <i>ICDCS</i>, <i>FC</i>,
+                            and <i>AFT</i>.
+
+                          Additionally, I am an Associate Editor for
+                          journals including <i>ACM Distributed Ledger
+                          Technologies</i> (ACM DLT).
+                       </p>
 
                       <b>My Journey</b>
                         <p>I received my PhD in Computer Science from
@@ -173,26 +204,26 @@ http://www.templatemo.com/tm-395-urbanic
                       I was also elected as a 2023 Monash Research
                       Talent Accelerator (RTA) Fellow. </p>
                       <b>What I Work On</b>
-                      <p>My research addresses real-world challenges in
-                      building practical systems that prioritise
-                      dependability, trust, security, privacy, and
-                      scalability. I design robust, high-performance
-                      digital infrastructures by leveraging dependable
+                      <p>My <a href="#templatemo-Research">research</a>
+                      addresses real-world challenges in building
+                      practical systems that prioritise dependability,
+                      trust, security, privacy, and scalability. I
+                      design robust, high-performance digital
+                      infrastructures by leveraging dependable
                       computing, decentralised systems, cryptography,
-                        and security protocols.</p>
+                      and security protocols.</p>
                       <b>Adoption and Impact</b>
                       <p>My work has identified and mitigated critical
                       vulnerabilities in widely deployed blockchain
                       protocols. These findings have been adopted by
                       major blockchain platforms — with a combined
                       market capitalisation exceeding $30 billion — to
-                        enhance security and performance.
-
-                        My research has also been adopted by
-                        governments in advancing digital
-                        transformation, and has contributed to
-                        cybercrime investigations, supporting
-                        research-informed decision-making in practice.
+                      enhance security and performance. My research
+                      has also been adopted by governments in
+                      advancing digital transformation, and has
+                      contributed to cybercrime investigations,
+                      supporting research-informed decision-making in
+                      practice.
                       </p>
                           <br><br>
 
